# dg-adw-gtk3

./: CONTRIBUTING.md  README.md  gtk4.md  meson.build  meson_options.txt
gtk/src/: colorize.py  index.theme.in  install-css.sh  meson.build  symlink.sh
gtk/src/adw-gtk3/gtk-3.0/: _custom.scss  _libhandy.scss
gtk/src/dg-adw-gtk3-dark/gtk-3.0/: meson.build
gtk/src/dg-adw-gtk3/gtk-3.0/: _apps.scss  _colors.scss  _common.scss  _custom.scss  _defaults.scss  _libhandy.scss  accent-colors.scss.in  assets.txt  meson.build  render-assets.sh
gtk/src/qualia/gtk-3.0/: _apps.scss  _colors.scss  _common.scss  _custom.scss  _defaults.scss  _drawing.scss  _granite.scss  _libhandy.scss  accent-colors.scss.in  gtk-dark-macos.scss  gtk-dark-symbolic.scss  gtk-macos.scss  gtk-symbolic.scss  render-assets.sh
gtk/src/qualia/gtk-3.0/apps/: _budgie.scss  _cinnamon.scss  _lightdm.scss  _mate.scss  _misc.scss  _unity.scss  _xfce.scss
gtk/src/qualia/gtk-4.0/: _defaults.scss
