option('gtk3', type: 'boolean', value: true)
option('gtk4', type: 'boolean', value: true)
option('accent-colors',
    type: 'array',
    choices: [
        'bark',
        'sage',
        'olive',
        'viridian',
        'prussiangreen',
        'lightblue',
        'blue',
        'purple',
        'magenta',
        'pink',
        'red',
    ],
)